[package]
name = "rust-actix-toy-project"
version = "0.1.0"
authors = ["Harry Laoulakos <harry@talos.software>"]
edition = "2018"

[dependencies]
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1"
listenfd = "0.3"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
job_scheduler = "1.2.1"
